--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100i,300,400,700');
 
 body {
   font-family: 'IBM Plex Sans', sans-serif;
